
Wed Nov 30 12:14:20 EST 2005 Paolo Molaro <lupus@ximian.com>

	* NumberFormatter.cs: work around arch-specific ulong cast behaviour
	with large numbers.

Tue Nov 29 05:38:37 EST 2005 Paolo Molaro <lupus@ximian.com>

	* Convert.cs: fix endianess issue when converting to base-8
	format. All the base code would need a rewrite for efficience.

2005-11-25  Sebastien Pouliot  <sebastien@ximian.com>

	* String.cs: Added support for Compare(... StringComparison) in 2.0.

2005-11-25  Alp Toker  <alp@atoker.com>

	* Type.cs (IsVisible): New 2.0 property, implemented recursively.

2005-11-17  Dick Porter  <dick@ximian.com>

	* Environment.cs: Incremented corlib version

2005-11-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* Int32.cs, UInt32.cs, Int16.cs, UInt16.cs, Int64.cs,
	UInt64.cs, Byte.cs, SByte.cs, Double.cs : Modify internal Parse
	methods to return the exception as an out parameter,
	instead of throwing it. This will be of special help
	to TryParse methods.
	* Environment.cs: Update corlib version to 42.
	
2005-11-14  Raja R Harinath  <rharinath@novell.com>

	* EventHandler.cs (EventHandler<TEventArgs>): Rename from EventHandler<T>.

2005-11-11  Zoltan Varga  <vargaz@gmail.com>

	* Type.cs (GetPseudoCustomAttributes): Return ComImportAttribute as well.

2005-11-11  Lluis Sanchez Gual  <lluis@novell.com>

	* TimeZone.cs: Removed incorrect double-check lock and unneeded
	hashtable access.

2005-11-11  Marek Safar  <marek.safar@seznam.cz>

	* Type.cs: IsNested implemented, signature fixes.

2005-11-11  Raja R Harinath  <rharinath@novell.com>

	* Array.cs (Resize<T>) [2-argument variant]: Fix nullref.

2005-11-10  Zoltan Varga  <vargaz@gmail.com>

	* Array.cs (Resize<T>): New internal method which takes a 'length' argument
	as well to avoid copying the whole array.

2005-11-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Int64.cs : ditto for long.

2005-11-09  Atsushi Enomoto  <atsushi@ximian.com>
